--- a/Develop/package.json
+++ b/Develop/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bootstrap": "^4.4.1",
     "electron": "^5.0.12",
     "electron-html-to": "^2.6.0",
     "github-scraper": "^6.8.0",
