--- a/Develop/package.json
+++ b/Develop/package.json
@@ -13,6 +13,7 @@
     "electron": "^5.0.12",
     "electron-html-to": "^2.6.0",
     "github-scraper": "^6.8.0",
+    "html-pdf": "^2.2.0",
     "inquirer": "^7.0.1",
     "pdfjs": "^2.3.2"
   }
